Fix layout bug

--- a/src/assets/stylesheets/components/_document-box.scss
+++ b/src/assets/stylesheets/components/_document-box.scss
@@ -1,4 +1,6 @@
 .document-box {
+  display: flex;
+  flex-direction: column;
 }
 
 .document-box__title {
@@ -29,12 +31,13 @@
 }
 
 .document-box__picture {
-  display: block;
-  margin-bottom: rem(20px);
-  @include box-shadow(2);
-  
-  > img {
-    width: 100%;
+  display: inline-block;
+  flex: 0 0 auto;
+  margin-top: rem(10px);
+  align-self: center;
+  img {
+    @include box-shadow(1);
+    max-height: 70vh;
   }
 }
 
